--- a/zed-settings.json
+++ b/zed-settings.json
@@ -3,7 +3,7 @@
     "mode": "subtle"
   },
   "theme": "One Dark",
-  "icon_theme": "Material Icon Theme",
+  "icon_theme": "Colored Zed Icons Theme Dark",
   "diagnostics": {
     "inline": {
       "enabled": true
@@ -14,7 +14,6 @@
     "git_status": true,
     "show_diagnostics": "errors"
   },
-  "buffer_font_family": "DM Mono",
   "buffer_font_size": 13,
   "project_panel": {
     "indent_size": 16
